crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__non_nullable_boolean_equals@nulls_true.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: NonNullableBoolean(
        IsTrue,
    ),
    field: Field {
        name: "column",
        data_type: Boolean,
        nullable: true,
    },
    unfiltered: BooleanArray
    [
      true,
      true,
      null,
      false,
    ],
    filtered: BooleanArray
    [
      true,
      true,
    ],
}
